--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/svg/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <div id="root" class="flex row min-w-screen min-h-screen" style="width: 100vw;height: 100vh;"></div>
+    <script type="module" src="/src/index.tsx"></script>
+    <!-- <script defer src="/your-path-to-fontawesome/js/all.js"></script> -->
   </body>
 </html>
