--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
-  <body>
-    <div id="root" class="flex row min-w-screen min-h-screen" style="width: 100vw;height: 100vh;"></div>
+  <body  class="dark:bg-slate-700 bg-slate-200">
+    <div id="root" class="w-full h-content overflow-auto flex"></div>
+    <!-- class="bg-red-700 " -->
     <script type="module" src="/src/index.tsx"></script>
     <!-- <script defer src="/your-path-to-fontawesome/js/all.js"></script> -->
   </body>
