--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body  class="dark:bg-slate-700 bg-slate-200">
     <div id="root" class="w-full h-content overflow-auto flex"></div>
-    <!-- class="bg-red-700 " -->
+    <!-- class="flex row min-w-screen min-h-screen" style="width: 100vw;height: 100vh;" -->
     <script type="module" src="/src/index.tsx"></script>
     <!-- <script defer src="/your-path-to-fontawesome/js/all.js"></script> -->
   </body>
